# PicoProto

./: .gitignore  CMakeLists.txt  README.md
src/: BlinkAnim.hpp  CMakeLists.txt  GlitchAnim.hpp  Icons.hpp  ProotAnims.hpp  main.cpp  sk6812.pio  sk6812.pio.h
src/Animations/: BlinkAnim.cpp  BlinkAnim.hpp  GlitchAnim.cpp  GlitchAnim.hpp
src/headers/: APDS9960.hpp  Animation.hpp  BoopCode.hpp  BoopSensor.hpp  CheekFinAnimator.hpp  Emotion.hpp  FanController.hpp  Gamma.hpp  HiFiProtogenPinout.hpp  Logger.hpp  Max7219Driver.hpp  MinFilter.hpp  MinFilter.tpp  PolledBoopCode.hpp  ProtoComms.hpp  SK6812.hpp  TextFont.hpp  TinyLED.hpp
src/sources/: APDS9960.cpp  Animation.cpp  BoopCode.cpp  BoopSensor.cpp  CheekFinAnimator.cpp  Emotion.cpp  FanController.cpp  Gamma.cpp  Logger.cpp  Max7219Driver.cpp  PolledBoopCode.cpp  ProtoComms.cpp  TinyLED.cpp
src/sources/SK6812/: Pixel.cpp  PixelMatrix.cpp  PixelString.cpp
